--- a/new.html
+++ b/new.html
@@ -4,16 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
   <title>Document</title>
-  <style>
-
-  </style>
+  
 </head>
 <body>
-  <div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <div class="tot">
+    <div class="font_g line_sp">if you don't have ideas</div>
+    <div class="font_b line_sp">read.</div>
+    <div class="font_g line_sp">if you have ideas</div>
+    <div class="font_g line_sp">but can't articulate them</div>
+    <div class="font_b line_sp">write.</div>
+    <div class="font_g line_sp">if you have ideas</div>
+    <div class="font_g line_sp">and th clarity to execute</div>
+    <div class="font_b line_sp">build.</div>
+    <div class="font_b line_sp">expand.</div>
+    <div class="font_b line_sp">organize.</div>
+    <div class="font_g line_sp">until your craziest</div>
+    <div class="font_g line_sp">ideas become reality</div>
   </div>
 </body>
 </html>
