--- a/new.html
+++ b/new.html
@@ -13,18 +13,19 @@
 </head>
 <body>
   <div class="tot">
-    <div class="font_g line_sp">if you don't have ideas</div>
+    <div class="font_g line_sp">if you don't have <div class="">&nbsp;ideas</div></div>
     <div class="font_b line_sp">read.</div>
-    <div class="font_g line_sp">if you have ideas</div>
+    <div class="font_g line_sp">if you have <div class="">&nbsp;ideas</div></div>
     <div class="font_g line_sp">but can't articulate them</div>
     <div class="font_b line_sp">write.</div>
-    <div class="font_g line_sp">if you have ideas</div>
+    <div class="font_g line_sp">if you have <div class="">&nbsp;ideas</div></div>
     <div class="font_g line_sp">and th clarity to execute</div>
     <div class="font_b line_sp">build.</div>
     <div class="font_b line_sp">expand.</div>
     <div class="font_b line_sp">organize.</div>
     <div class="font_g line_sp">until your craziest</div>
-    <div class="font_g line_sp">ideas become reality</div>
+    <div class="font_g line_sp"><div class="">ideas&nbsp;</div> become reality</div>
+    <!-- &nbsp; -->
   </div>
 </body>
 </html>
