--- a/new.html
+++ b/new.html
@@ -13,19 +13,23 @@
 </head>
 <body>
   <div class="tot">
-    <div class="font_g line_sp">if you don't have <div class="">&nbsp;ideas</div></div>
+    <div class="font_g line_sp">if you don't have <div class="test">&nbsp;ideas</div></div>
     <div class="font_b line_sp">read.</div>
-    <div class="font_g line_sp">if you have <div class="">&nbsp;ideas</div></div>
+    <div class="font_g line_sp">if you have <div class="test2">&nbsp;ideas</div></div>
     <div class="font_g line_sp">but can't articulate them</div>
     <div class="font_b line_sp">write.</div>
-    <div class="font_g line_sp">if you have <div class="">&nbsp;ideas</div></div>
+    <div class="font_g line_sp">if you have <div class="test2">&nbsp;ideas</div></div>
     <div class="font_g line_sp">and th clarity to execute</div>
     <div class="font_b line_sp">build.</div>
     <div class="font_b line_sp">expand.</div>
-    <div class="font_b line_sp">organize.</div>
+    <div class="right line_sp">organize.</div>
     <div class="font_g line_sp">until your craziest</div>
-    <div class="font_g line_sp"><div class="">ideas&nbsp;</div> become reality</div>
+    <div class="font_g line_sp"><div class="test">ideas&nbsp;</div> become reality</div>
     <!-- &nbsp; -->
+    <div class="joy">
+      <div class="left">좌</div>
+      <div class="right">우</div>
+    </div>
   </div>
 </body>
 </html>
